<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/shopping_cart_icon"
            android:title="@string/order" />

        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/offer_icon"
            android:title="@string/offers" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notification_icon"
            android:title="@string/notification" />

    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/setting_icon"
                android:title="@string/setting" />

            <item
                android:id="@+id/help"
                android:icon="@drawable/help_icon"
                android:title="@string/help" />

            <item
                android:id="@+id/logout"
                android:icon="@color/black"
                android:title="Logout" />
        </menu>
    </item>
</menu>