<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkColor"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/foodx" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColorHint="@color/lightGreen">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGreen"
            android:drawableStart="@drawable/person_icon"
            android:drawablePadding="10dp"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/lightGreen"
            android:textColorHint="@color/lightGreen"
            android:textSize="20dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColorHint="@color/lightGreen"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/lightGreen">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGreen"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/lightGreen"
            android:textColorHint="@color/lightGreen"
            android:textSize="20dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20dp" />
</RelativeLayout>